Removed unnecessary html code and created reused components

--- a/resources/vue/assets/scss/app.scss
+++ b/resources/vue/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "flags/flags.css";
+@import "tiny-slider/dist/tiny-slider.css";
 @import "bootstrap";
 @import "styles";
 @import "icons/style.css";
